# SigGen

./: .gitignore  CMakeLists.txt  README.md  SigGen.h.in
data/: A_desc.xml  B_desc.xml  C4-Maj_desc.xml  IC.xlsx  IC_desc.xml  LP_desc.xml  PerfHi2Even_desc.xml  PerfHi3Odd_desc.xml  PerfHi_desc.xml  PerfLow_desc.xml  PerfMed_desc.xml  SIT_desc.xml  Seq1_desc.xml  Seq2_desc.xml  SequenceDesc.dtd  Sig1_desc.xml  VentHi1Odd_desc.xml  VentHi2Even_desc.xml
documents/: C4-ff-pp.xlsx  Frequencies of Musical Notes A4 = 440 Hz.URL  Microsoft WAVE soundfile format.URL  SequenceDefinition.docx  SequenceDefinition.drawio  SequenceGenerator.drawio  SequenceVisual.drawio  Wav (RIFF) File Format Tutorial.URL  pitches.xlsx
include/: DTMF.h  Sequence.h  SigGen.h  Signal.h
source/: DTMF.cpp  Sequence.cpp  Signal.cpp  seqgen.cpp
test/: test-SeqGen.sh
